Lista de praias + serviço de alerta + início do form

--- a/p10-http/src/app/app.component.scss
+++ b/p10-http/src/app/app.component.scss
@@ -35,6 +35,9 @@ nav {
     padding: 25px 30px 30px 30px;
     text-align: center;
 }
+li {
+    padding: 3px;
+}
 li:hover {
     background-color: #e2e2e2;
     border-radius: 5px;
