--- a/p10-http/src/app/pages/praias/praias-form/praias-form.component.scss
+++ b/p10-http/src/app/pages/praias/praias-form/praias-form.component.scss
@@ -1,3 +1,17 @@
 * {
     text-align: start;
 }
+button {
+    text-align: center;
+    padding: 10px 60px 10px 60px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
