--- a/p10-http/src/app/pages/praias/praias-list/praias-list.component.scss
+++ b/p10-http/src/app/pages/praias/praias-list/praias-list.component.scss
@@ -13,5 +13,8 @@
 }
 #loading {
     width: 100%;
-    cursor: progress;
+    padding: 20px 0 20px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
