--- a/p10-http/src/styles.scss
+++ b/p10-http/src/styles.scss
@@ -1,3 +1,20 @@
-/* You can add global styles to this file, and also import other style files */
+@use '~@angular/material' as mat;
+
+@include mat.core();
+
+$p10-http-primary: mat.define-palette(mat.$blue-palette);
+$p10-http-accent: mat.define-palette(mat.$light-blue-palette, A200, A100, A400);
+$p10-http-warn: mat.define-palette(mat.$red-palette);
+
+$p10-http-theme: mat.define-light-theme((
+  color: (
+    primary: $p10-http-primary,
+    accent: $p10-http-accent,
+    warn: $p10-http-warn,
+  )
+));
+
+@include mat.all-component-themes($p10-http-theme);
+
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @import url('https://fonts.googleapis.com/css2?family=Gluten:wght@600&family=Poppins&display=swap');
