--- a/p10-http/src/app/pages/praias/praias-form/praias-form.component.html
+++ b/p10-http/src/app/pages/praias/praias-form/praias-form.component.html
@@ -1,4 +1,5 @@
-<h5 style="margin-bottom: 20px;">Nova praia</h5>
+<h5 style="margin-bottom: 20px;" *ngIf="!isEditing; else editing">Nova praia</h5>
+<ng-template #editing><h5 style="margin-bottom: 20px;">Editar praia</h5></ng-template>
 
 <form class="needs-validation" novalidate [formGroup]="form">
     <div class="row">
