--- a/p10-http/src/app/pages/praias/praias-list/praias-list.component.html
+++ b/p10-http/src/app/pages/praias/praias-list/praias-list.component.html
@@ -24,13 +24,13 @@
                     <td>{{ praia.nome }}</td>
                     <td>
                         <button class="btn btn-outline-info mb-1 btn-sm">
-                            <i class="fas fa-info" routerLink="/praias/[praia.id]/detalhes"></i>
+                            <i class="fas fa-info"></i>
                         </button>
                     </td>
                     <td style="text-align: end;">
                         <span class="float-right">
-                            <button class="btn btn-outline-warning mb-1 btn-sm">
-                            Atualizar
+                            <button class="btn btn-outline-warning mb-1 btn-sm" (click)="onEdit(praia.id)">
+                            Editar
                             </button>
                             
                             <button class="btn btn-outline-danger mb-1 btn-sm">
