Exclusão de registros com DELETE + Serviço genérico de CRUD + Formatação

--- a/p10-http/src/app/app.component.scss
+++ b/p10-http/src/app/app.component.scss
@@ -20,18 +20,18 @@ section {
     box-shadow: 1px 1px 7px 2px #6e6d6a8f;
 }
 h5 {
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 nav {
     height: 50px;
-    border-radius: 5px; 
+    border-radius: 5px;
     padding: 8px;
     text-align: center;
 }
 .container {
     background-color: #f8f9fa;
     height: 100%;
-    border-radius: 5px; 
+    border-radius: 5px;
     padding: 25px 30px 30px 30px;
     text-align: center;
 }
