--- a/p10-http/src/app/pages/praias/praias-form/praias-form.component.scss
+++ b/p10-http/src/app/pages/praias/praias-form/praias-form.component.scss
@@ -3,7 +3,7 @@
 }
 button {
     text-align: center;
-    padding: 10px 60px 10px 60px;
+    padding: 10px 60px;
     margin: auto;
     display: flex;
     justify-content: center;
