--- a/p10-http/src/app/app.component.html
+++ b/p10-http/src/app/app.component.html
@@ -2,32 +2,32 @@
   <section>
     <h5>Http</h5>
 
-    <br><hr><br>
+    <br>
+    <hr><br>
 
     <!-- Existem mudanças no atributo style para CSS -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="collapse navbar-collapse" id="navbarNav">
 
-        <ul class="navbar-nav" style="margin: auto; cursor: pointer;" 
-        *ngIf="showDefaultNavigationBar; else voltar">
-            <li routerLinkActive="active" class="nav-item" style="margin-right: 15px;">
-              <a routerLink="/home" class="nav-link">
-                <i class="fas fa-home" style="margin-right: 5px;"></i> Home
-              </a>
-            </li>
-            <li routerLinkActive="active" class="nav-item" style="margin-right: 15px;">
-              <a routerLink="/praias" class="nav-link">
-                <i class="fas fa-umbrella-beach" style="margin-right: 5px;"></i> Praias
-              </a>
-            </li>
-            <p style="margin-right: 15px;">|</p>         
-            <li routerLinkActive="active" class="nav-item">
-              <a routerLink="/rxjs-poc" class="nav-link">
-                <i class="fas fa-signal" style="margin-right: 5px;"></i> RxJS POC
-              </a>
-            </li> 
+        <ul class="navbar-nav" style="margin: auto; cursor: pointer;" *ngIf="showDefaultNavigationBar; else voltar">
+          <li routerLinkActive="active" class="nav-item" style="margin-right: 15px;">
+            <a routerLink="/home" class="nav-link">
+              <i class="fas fa-home" style="margin-right: 5px;"></i> Home
+            </a>
+          </li>
+          <li routerLinkActive="active" class="nav-item" style="margin-right: 15px;">
+            <a routerLink="/praias" class="nav-link">
+              <i class="fas fa-umbrella-beach" style="margin-right: 5px;"></i> Praias
+            </a>
+          </li>
+          <p style="margin-right: 15px;">|</p>
+          <li routerLinkActive="active" class="nav-item">
+            <a routerLink="/rxjs-poc" class="nav-link">
+              <i class="fas fa-signal" style="margin-right: 5px;"></i> RxJS POC
+            </a>
+          </li>
         </ul>
-        
+
         <ng-template #voltar>
           <ul class="navbar-nav" style="margin: auto; cursor: pointer;">
             <li class="nav-item" style="margin-right: 15px;">
@@ -37,10 +37,10 @@
             </li>
           </ul>
         </ng-template>
-        
+
       </div>
     </nav>
-    
+
     <br>
 
     <!-- Rotas da aplicação -->
