--- a/p10-http/src/app/pages/praias/praias-list/praias-list.component.html
+++ b/p10-http/src/app/pages/praias/praias-list/praias-list.component.html
@@ -9,7 +9,7 @@
         </div>
     </div>
     <div class="card-body">
-        <table class="table table-hover" *ngIf="praias$ | async as praias; else loading" >
+        <table class="table table-hover" *ngIf="praias$ | async as praias; else loading">
             <thead>
                 <tr>
                     <th>#</th>
@@ -30,11 +30,11 @@
                     <td style="text-align: end;">
                         <span class="float-right">
                             <button class="btn btn-outline-warning mb-1 btn-sm" (click)="onEdit(praia.id)">
-                            Editar
+                                Editar
                             </button>
-                            
-                            <button class="btn btn-outline-danger mb-1 btn-sm">
-                            Remover
+
+                            <button class="btn btn-outline-danger mb-1 btn-sm" (click)="onDelete(praia)">
+                                Remover
                             </button>
                         </span>
                     </td>
