--- a/p10-http/src/app/pages/praias/praias-list/praias-list.component.scss
+++ b/p10-http/src/app/pages/praias/praias-list/praias-list.component.scss
@@ -13,7 +13,7 @@
 }
 #loading {
     width: 100%;
-    padding: 20px 0 20px 0;
+    padding: 20px 0;
     display: flex;
     justify-content: center;
     align-items: center;
