--- a/p8e9-formularios/src/app/shared/components/form-debug/form-debug.component.css
+++ b/p8e9-formularios/src/app/shared/components/form-debug/form-debug.component.css
@@ -6,6 +6,6 @@
 #detalhes {
     border-radius: 10px;
     background-color: #d8e3eee0;
-    padding: 15px 15px 0 15px;
+    padding: 15px 15px 0;
     width: 300px;
 }
