--- a/p10-http/src/app/app.component.scss
+++ b/p10-http/src/app/app.component.scss
@@ -32,7 +32,7 @@ nav {
     background-color: #f8f9fa;
     height: 100%;
     border-radius: 5px;
-    padding: 25px 30px 30px 30px;
+    padding: 25px 30px 30px;
     text-align: center;
 }
 li {
