--- a/p7-rotas/src/app/login/login.component.html
+++ b/p7-rotas/src/app/login/login.component.html
@@ -2,15 +2,15 @@
 
 <div class="col-4" style="margin: auto;">
     <div class="row">
-        <label for="usuario" style="text-align: start; margin: 15px 0 5px 0;">Usuário:</label>
+        <label for="usuario" style="text-align: start; margin: 15px 0 5px;">Usuário:</label>
         <input type="text" [(ngModel)]="usuario.nome" class="form-control" id="usuario" placeholder="Nome de usuário">
     </div>
     <div class="row">
-        <label for="senha" style="text-align: start; margin: 15px 0 5px 0;">Senha:</label>
+        <label for="senha" style="text-align: start; margin: 15px 0 5px;">Senha:</label>
         <input type="password" [(ngModel)]="usuario.senha" class="form-control" id="senha" placeholder="Senha">
     </div><br>
     <div class="row">
-        <button type="button" class="btn btn-primary" style="margin: 25px 0 5px 0;" (click)="fazerLogin()">
+        <button type="button" class="btn btn-primary" style="margin: 25px 0 5px;" (click)="fazerLogin()">
             <i class="fas fa-sign-in-alt" style="margin-right: 5px;"></i> Login
         </button>
     </div>
