--- a/p7-rotas/src/app/pagina-nao-encontrada/pagina-nao-encontrada.component.html
+++ b/p7-rotas/src/app/pagina-nao-encontrada/pagina-nao-encontrada.component.html
@@ -2,6 +2,6 @@
 
 <p>Você caiu em uma página inexistente!</p>
 
-<button type="button" class="btn btn-primary" style="margin: 25px 0 5px 0;" (click)="home()">
+<button type="button" class="btn btn-primary" style="margin: 25px 0 5px;" (click)="home()">
     <i class="fas fa-arrow-alt-circle-left" style="margin-right: 5px;"></i> Ir para home
 </button>
