Página de detalhes da praia

--- a/p10-http/src/app/pages/praias/praias-form/praias-form.component.html
+++ b/p10-http/src/app/pages/praias/praias-form/praias-form.component.html
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="col-md-4 mb-3">
-            <label for="validationCustom03" style="margin-bottom: 5px;">Apta para banho</label>
+            <label for="validationCustom03" style="margin-bottom: 5px;">Própria para banho</label>
             <div class="custom-control custom-radio custom-control-inline">
                 <label class="radio-inline" *ngFor="let item of banhoOps" style="margin-right: 15px;">
                     <input
