--- a/p10-http/src/app/pages/praias/praias-detalhes/praias-detalhes.component.html
+++ b/p10-http/src/app/pages/praias/praias-detalhes/praias-detalhes.component.html
@@ -1,1 +1,31 @@
-<p>praias-detalhes works!</p>
+<div class="container" style="text-align: start;">
+    <div class="row" style="margin-bottom: 5px;">
+        <div class="col-sm">
+            <label for="detail1">
+                <h5>Nome</h5>
+            </label>
+            <div class="dropdown-divider" style="margin: 0 0 15px;"></div>
+            <p>{{ nome }}</p>
+        </div>
+    </div>
+    <div class="row" style="margin-bottom: 5px;">
+        <div class="col-sm">
+            <label for="detail2">
+                <h5>Região</h5>
+            </label>
+            <div class="dropdown-divider" style="margin: 0 0 15px;"></div>
+            <p>{{ regiao }}</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm">
+            <label for="detail3">
+                <h5>Condição</h5>
+            </label>
+            <div class="dropdown-divider" style="margin: 0 0 15px;"></div>
+            <mat-chip [color]="colorLabel" selected>
+                {{ banhoLabel }}
+            </mat-chip>
+        </div>
+    </div>
+</div>
