--- a/p10-http/src/app/app.component.html
+++ b/p10-http/src/app/app.component.html
@@ -22,13 +22,13 @@
           </li>
           <p style="margin-right: 15px;">|</p>
           <li routerLinkActive="active" class="nav-item" style="margin-right: 15px;">
-            <a routerLink="/rxjs-poc" class="nav-link">
-              <i class="fas fa-signal" style="margin-right: 5px;"></i> RxJS POC
+            <a routerLink="/upload" class="nav-link">
+              <i class="fas fa-upload" style="margin-right: 5px;"></i> Upload
             </a>
           </li>
           <li routerLinkActive="active" class="nav-item">
-            <a routerLink="/upload" class="nav-link">
-              <i class="fas fa-upload" style="margin-right: 5px;"></i> Upload
+            <a routerLink="/search" class="nav-link">
+              <i class="fas fa-search" style="margin-right: 5px;"></i> Pesquisa
             </a>
           </li>
         </ul>
