--- a/p10-http/src/app/pages/upload-file/upload-file.component.html
+++ b/p10-http/src/app/pages/upload-file/upload-file.component.html
@@ -6,7 +6,7 @@
 <div style="margin-top: 10px;">
     <button type="button" class="btn btn-primary" (click)="onUploadFile()" [disabled]="!files">Upload</button>
 </div>
-<div style="margin-top: 10px;">
+<!-- <div style="margin-top: 10px;">
     <button style="margin-right: 10px;" type="button" class="btn btn-primary" (click)="onDownloadExcel()">Download Excel</button>
     <button type="button" class="btn btn-primary" (click)="onDownloadPdf()">Download PDF</button>
-</div>
+</div> -->
